feat: 附魔资源体系 + 合成升级链路修复 + 模块拓展全面修复
- 新增附魔资源体系(EnchantedResource)：160:1 压缩资源(末影珍珠 32:1)，PDC 标记，覆盖约 55 种
- 修复无法合成：VanillaRef 误把附魔资源当散装吞掉，混合配方(enchanted:coal + COAL)永远缺料
- 合成格 3×3 → 4×4(16 格)：大配方(小麦 T12 需 11 格)不再摆不下；一键填充改聚合装箱，格位不足退回背包不吞料
- 材料指南改按 ItemRef 保序：附魔行不再被同材质原版材料合并吞掉(修复“不显示在 GUI”)
- 新增升级材料 GUI(UpgradeMaterialsGui/Listener)：附魔资源详情按真实数量拆分展示 + 成品槽点击当场手动压缩
- 压缩模块改仓储级结算(compactStorage)：按全仓同材质总量聚合压缩，修复“满仓也不压缩”；调用点前置到停工判定之前防死锁
- 自动熔炼补 RAW_IRON/RAW_COPPER/RAW_GOLD 映射：铁/铜/金仆从熔炼生效，打通附魔铁锭/铜锭/金锭产出链
- 范围扩展模块修复：钓鱼仆从工作范围改用统一半径口径；仆从信息卡工作范围含模块加成
- 离线补发经过压缩模块：OfflineSettlement 结算前后各压一轮，防“满仓散装→零补发→永不压缩”死锁
- 售卖修复：附魔资源按 ratio 折算计价，压缩后不再价值蒸发 99%
- 配方容量启动期体检告警：材料种类 >4 行 / 装箱格数 > 合成格数时告警
- 新增 PlayerTasks 工具类；同步适配 config/gui/messages 配置与 repository、work 策略(移除农夫/生成器理想布局自动搭建逻辑)
- 测试：96 项全绿(新增压缩比例、范围扩展、配方容量共 6 项)